home work 06 validated

--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
     <div class="inputGroup">  
     <label for="name">Имя</label>
     <div class="modalField">
-    <input class="modalInput" type="name" name="name" id="name">
+    <input class="modalInput" type="text" name="name" id="name">
     <svg class="formIcon" width="12px" height="12px">
         <use href="./images/symbol-defs.svg#.iconformFigure"></use>
     </svg>
@@ -456,7 +456,7 @@
     <div class="checkGroup">    
         <input class="checkInput visuallyHidden" type="checkbox" name="policy" id="policy">    
         <label for="policy" class="checkLabel">
-            <span class="checkText">Соглашаюсь с рассылкой и принимаю <a class="policyLink">Условия договора</a href="#"></span>
+            <span class="checkText">Соглашаюсь с рассылкой и принимаю <a href="#" class="policyLink">Условия договора</a></span>
             </label>
         <svg  class="markIcon" width="11px" height="8px">
             <use href="./images/symbol-defs.svg#.iconformMark"></use>
