modal activity appended hw 06

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
                     </a>
                 </li>
                 <li class="top">
-                    <a class="link our-contacts" href="tel:+380961111111">
+                    <a href="tel:+380961111111">
                         <svg class="top-icon" width="10px" height="16px">
                             <use href="./images/symbol-defs.svg#.iconphone"></use>
                         </svg>+38 096 111 11 11
@@ -216,8 +216,8 @@
         <!--Логотип-->
         <div class="container-bottom">
     
-            <div class="adress-part">
-                <a class="logo column" href="#"><span class="first-part">Web</span><span class="contrast">Studio</span></a>
+            <div>
+                <a href="#"><span class="first-part">Web</span><span class="contrast">Studio</span></a>
     
                 <address>
                     <p class="location">г. Киев, пр-т Леси Украинки, 26</p>
