changed and cheсked hw 06

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
                     </a>
                 </li>
                 <li class="top">
-                    <a href="tel:+380961111111">
+                    <a class="link" href="tel:+380961111111">
                         <svg class="top-icon" width="10px" height="16px">
                             <use href="./images/symbol-defs.svg#.iconphone"></use>
                         </svg>+38 096 111 11 11
@@ -217,7 +217,7 @@
         <div class="container-bottom">
     
             <div>
-                <a href="#"><span class="first-part">Web</span><span class="contrast">Studio</span></a>
+                <a class="logo" href="#"><span class="first-part">Web</span><span class="contrast">Studio</span></a>
     
                 <address>
                     <p class="location">г. Киев, пр-т Леси Украинки, 26</p>
@@ -277,6 +277,7 @@
                 </button>
             </form>
         </div>
-    </footer>     
+    </footer>
+
 </body>
 </html>
