--- a/portfolio.html
+++ b/portfolio.html
@@ -228,7 +228,7 @@
                 </address>
             </div>
             <div class="offer-part">
-                <h3 class="offer-title">присоединяйтесь</h3>
+                <p class="offer-paragraph">присоединяйтесь<p>
                 <ul>
                     <li class="footer-socials">
                         <a class="footer-link" href="#">
@@ -265,11 +265,9 @@
                 </ul>
     
             </div>
-            <form class="mail-form">
-                <div class="footer-form">
+            <form class="mail-form">                
                     <p class="footer-information">Подпишитесь на рассылку</p>
-                    <input class="footer-input" type="email" placeholder="E-mail">
-                </div>
+                    <input class="footer-input" type="email" placeholder="E-mail">                
                 <button class="subscribe-button">Подписаться
                     <svg class="button-icon" width="24px" height="24px">
                         <use href="./images/symbol-defs.svg#.iconpaperPlane"></use>
